qr codes and elliptic curve cryptography

--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission
         android:name="android.permission.USE_FINGERPRINT" />
     <uses-permission android:name="com.samsung.android.providers.context.permission.WRITE_USE_APP_FEATURE_SURVEY"/>
+    <uses-permission android:name="android.permission.CAMERA" />
 
 
     <application
@@ -49,6 +50,8 @@
                 <data android:mimeType="application/vnd.com.keychain.auth.request"/>
             </intent-filter>
         </activity>
+
+        <activity android:name=".QRScannerActivity" />
     </application>
 
 </manifest>
