--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -22,13 +22,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:11.8.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.volley:volley:1.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'com.android.support:design:23.1.0'
+    compile 'com.android.support:design:27.0.2'
     compile 'com.github.kenglxn.QRGen:android:2.4.0'
     compile 'com.github.ajalt.reprint:core:3.2.1@aar' // required: supports marshmallow devices
     compile 'com.github.ajalt.reprint:reprint_spass:3.2.1@aar' // optional: support for pre-marshmallow Samsung devices
-
+    compile 'me.dm7.barcodescanner:zxing:1.9.8'
 
 }
 
