--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,9 +4,11 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "ejs": "^2.5.7",
+    "elliptic": "^6.4.0",
     "eth-lightwallet": "^3.0.1",
     "ethereumjs-tx": "^1.3.3",
     "ethereumjs-util": "^5.1.3",
+    "events": "^1.1.1",
     "express": "^4.13.4",
     "jsonwebtoken": "^5.7.0",
     "mongoose": "^4.4.5",
@@ -14,6 +16,7 @@
     "qr-image": "^3.2.0",
     "qrcode": "^1.2.0",
     "randomstring": "^1.1.5",
+    "secp256k1": "^3.5.0",
     "web3": "^1.0.0-beta.29"
   }
 }
