--- a/webapp/package.json
+++ b/webapp/package.json
@@ -18,6 +18,7 @@
     "randomstring": "^1.1.5",
     "request": "^2.83.0",
     "secp256k1": "^3.5.0",
+    "url": "^0.11.0",
     "web3": "~0.20.0"
   }
 }
