--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,6 +11,7 @@
     "events": "^1.1.1",
     "express": "^4.13.4",
     "jsonwebtoken": "^5.7.0",
+    "mongodb": "^3.0.2",
     "mongoose": "^4.4.5",
     "morgan": "^1.7.0",
     "qr-image": "^3.2.0",
