--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,6 +20,6 @@
     "request": "^2.83.0",
     "secp256k1": "^3.5.0",
     "url": "^0.11.0",
-    "web3": "~0.20.0"
+    "web3": "^0.20.6"
   }
 }
